Make responsice to home and header

--- a/src/container/About/about.css
+++ b/src/container/About/about.css
@@ -7,7 +7,7 @@
 .about-img{
     height: 100%;
     width: 40%;
-    background: url('../../images//scooter.PNG');
+    background: url('../../assets/Peoples/scooter.PNG');
     background-position: center;
     background-repeat: no-repeat;
     background-size: 500px;
