--- a/src/container/404/error.css
+++ b/src/container/404/error.css
@@ -11,7 +11,7 @@
 .err-img{
     height: 80vh;
     width: 50%;
-    background: url("../../images//404.PNG");
+    background: url("../../assets//Peoples/404.PNG");
     background-repeat: no-repeat;
     background-position: center;
     background-size: 350px;
