--- a/src/container/Cart/addCart/addCart.css
+++ b/src/container/Cart/addCart/addCart.css
@@ -66,7 +66,7 @@
 .addCart-img{
     height: 400px;
     width: 400px;
-    background: url("../../../images//girl1.PNG");
+    background: url("../../../assets/Peoples/girl1.PNG");
     background-size: 500px;
     background-position: top right;
     background-repeat: no-repeat;
