--- a/src/container/mainFooter/footer.css
+++ b/src/container/mainFooter/footer.css
@@ -6,4 +6,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: .5s;
+}
+@media screen and (max-width: 400px) {
+    .main-footer{
+        font-size: .8em;
+        justify-content: start;
+        padding-left:15%;
+
+    }
 }
