--- a/src/container/Products/filter/filter.css
+++ b/src/container/Products/filter/filter.css
@@ -17,6 +17,7 @@
     outline: none;
     letter-spacing: 1px;
     border-radius: 5px;
+    /* display: ; */
 }
 .prod-cat-list{
     margin-top: -10px;
