--- a/client/src/container/Products/filter/filter.css
+++ b/client/src/container/Products/filter/filter.css
@@ -5,6 +5,7 @@
     padding-left: 40px;
     padding-top: 20px;
     border-right: 1px solid #0002;
+    transition: .5s;
 }
 .product-filter h3{
     cursor: default;
@@ -50,6 +51,7 @@
     list-style: none;
     color: #0006;
     letter-spacing: 1px;
+    /* background-color: #f53232; */
 }
 .prod-color-list li.active{
     border-bottom: 1px solid #0005;
@@ -85,4 +87,78 @@
 }
 .product-filter button:hover{
     color: #fff;
+}
+
+
+.filter-color{
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    box-shadow:inset 0 0 4px #0005;
+    margin-top: 10px;
+}
+.filter-color.red{
+    background-color: red;
+}
+.filter-color.green{
+    background-color: green;
+}
+.filter-color.black{
+    background-color: #000000b0;
+}
+.filter-color.yellow{
+    background-color: yellow;
+}
+.filter-color.blue{
+    background-color: blue;
+}
+.prod{
+    display: none;
+    pointer-events: none;
+}
+.prod.active{
+    left: 250px;
+    top: 100px;
+}
+@media screen and (max-width: 800px) {
+    
+    
+    .prod{
+        display: block;
+        position: absolute;
+        margin-top: 10px;
+        left: 10px;
+        background: #f7f7f7;
+        box-shadow: 0 0 3px #0005;
+        color: #0008;
+        padding: 5px 10px;
+        pointer-events: all;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: .5s;
+        z-index: 101;
+
+        /* z-index: 1000; */
+    }
+    .product-filter{
+        display: block;
+        position: absolute;
+        margin-left: -240px;
+        width: 250px;
+        height: 101%;
+        z-index: 100;
+        background-color: #fafafa75;
+        backdrop-filter: blur(4px);
+        overflow: hidden;
+    }
+
+    .prod-search{
+        width: 50%;
+    }
+    .product-filter.active{
+        box-shadow: 0 5px 10px #000;
+        margin-left: 0px;
+       
+        /* display: none; */
+    }
 }
