--- a/client/src/container/Header/header.css
+++ b/client/src/container/Header/header.css
@@ -29,6 +29,7 @@
     height: 190px;
     flex-direction: column;
     justify-content: space-around;
+    /* background: red; */
     width: 100%;
     opacity: 1;
 }
