--- a/client/src/container/Cart/cart.css
+++ b/client/src/container/Cart/cart.css
@@ -98,3 +98,38 @@
 .addCart-total-button:hover{
     color: #fff;
 }
+
+@media screen and (max-width: 800px) {
+    .addCart-Box{
+        padding-left: 0;
+    }
+}
+@media screen and (max-width: 700px) {
+    .addCart-img{
+        /* padding-left: 0; */
+        background-size: 300px;
+    }
+}
+@media screen and (max-width: 550px) {
+    .addCart-Box{
+        padding-left: 50px;
+    }
+    .addCart-img
+    {
+        display: none;
+    }
+}
+@media screen and (max-width: 550px) {
+    .cart-buttons{
+        flex-direction: column;
+        height: 100px;
+    }
+    .contShop{
+        width: 100%;
+    }
+    .addCart-Box{
+        width: 100%;
+        padding-left: 25px;
+
+    }
+}
