--- a/client/src/container/Products/ListData/list.css
+++ b/client/src/container/Products/ListData/list.css
@@ -6,11 +6,14 @@
 
 
 .prod-list-header{
+    position: absolute;
     display: flex;
     padding: 0 10px;
+    width: 70%;
     justify-content: center;
     align-items: center;
     cursor: default;
+    background-color: #fff;
 }
 .prod-thumbnail div{
     border: 1px solid #0008;
@@ -62,6 +65,8 @@
 }
 
 .product-list-content{
+    position: relative;
+    top: 100px;
     display: grid;
     height: 90%;
     width: 100%;
